--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,18 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
-<form action="login" method="POST">
+<form action="/login" method="POST">
     Email: <br>
     <input type="text" name="username">
-
     <br>
-
     Password: <br>
     <input type="password" name="password">
-
     <br>
     <button type="submit">Login</button>
 </form>
