added update in Manufacture, Product, Role controllers

--- a/src/main/resources/templates/product/update.html
+++ b/src/main/resources/templates/product/update.html
@@ -4,10 +4,12 @@
       lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Product add</title>
+    <title>Product update</title>
 </head>
      <body>
          <form action="/product/update" method="POST">
+             <label for="id">Id:</label>
+             <input type="text" id="id" name="id"><br>
              <label for="Name">Name:</label>
              <input type="text" id="Name" name="name"><br>
              <label for="price">Price:</label>
