--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -14,8 +14,8 @@
              <input type="text" id="firstName" name="firstName"><br>
              <label for="email">E-mail:</label>
              <input type="email" id="email" name="email"><br>
-             <label for="password">E-mail:</label>
-             <input type="email" id="password" name="password"><br>
+             <label for="password">Password:</label>
+             <input type="text" id="password" name="password"><br>
             <p>Select roles of the user:</p>
              <th:block th:each="role : ${roles}">
                  <input type="checkbox" name="rolesNames" th:value="${role.name}"/>
