refactored method save and update in UserService to proper working

--- a/src/main/resources/templates/role/delete.html
+++ b/src/main/resources/templates/role/delete.html
@@ -7,6 +7,7 @@
     <title>Role delete</title>
 </head>
      <body>
+     <h2>Before deleting, make sure that any user does not have this role.</h2>
          <form action="/role/delete" method="POST">
              <label for="id">ID in format UUID:</label>
              <input type="text" id="id" name="id">
