added @Secured in all necessary places

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -38,7 +38,10 @@
             To update user - /user/update
             To delete user by id - /user/delete
         </pre>
-    <h3>For logout from our site - /logout</h3>
+    <h3>For logout</h3>
+        <pre>
+            To logout  - /logout
+        </pre>
 
 </body>
 </html>
