added Thymeleaf  layout pages

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -10,6 +10,9 @@
 <body>
     <h2>Welcome to our Products Management System!</h2>
     <h3>Here You can carry out operations stated below:</h3>
+    <pre>
+            To start new GUI - /home
+        </pre>
         <pre>
             To see all products - /product/all
             To find product by its name - /product/name
