added Thymeleaf  fragment pages for home page

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -11,7 +11,7 @@ header {
 nav {
     float: left;
     width: 15%;
-    height: 300px;
+    height: auto;
     background: #ccc;
     padding: 20px;
 }
@@ -24,7 +24,7 @@ article {
     padding: 20px;
     width: 85%;
     background-color: #f1f1f1;
-    height: 300px;
+    height: auto;
 }
 section:after {
     content: "";
