--- a/src/main/resources/templates/fragments/app-fragments.html
+++ b/src/main/resources/templates/fragments/app-fragments.html
@@ -17,7 +17,7 @@
     <li><a th:href="@{/admin/orders}">Order Management</a></li>
 </ul>
 <div th:fragment="copyright">
-    &copy; o7planning.org
+    &copy; Elnur Kasimov
 </div>
 </body>
 </html>
