--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
                                                )}">
 
 <head>
-    <title>Title of Home Page</title>
+    <title>Home Page</title>
 <!--    <th:block id="home-static-resources">-->
 <!--        <script type="text/javascript" src="../static/home.js" th:src="@{/home.js}"></script>-->
 <!--        <link rel="stylesheet" type="text/css" href="../static/home.css" th:href="@{/home.css}"/>-->
@@ -19,7 +19,7 @@
 </head>
 <body>
 <div id="home-header">
-    Header of Home Page
+    Manufacture&Products Management System
 </div>
 <div id="home-nav" th:replace="~{/fragments/app-fragments :: nav-default}">
     Home Nav
